package com.pos.cashiersp.common

object TestTags {
    const val GREETING_TEXT = "GREETING_TEXT"
    const val DRAWER_CONTAINER = "DRAWER_CONTAINER"
    const val ENTERPRISE_POS_LOGO = "ENTERPRISE_POS_LOGO"

    object CashierScreen {
        const val CASHIER_TITLE = "CASHIER_TITLE"
        const val MENU_DRAWER_BUTTON = "MENU_DRAWER_BUTTON"
        const val CHART_BUTTON = "CHART_BUTTON"
        const val PAYMENT_BOTTOM_SHEET = "PAYMENT_BOTTOM_SHEET"
    }

    object StockManagementScreen {
        const val STOCK_MANAGEMENT_TITLE = "STOCK_MANAGEMENT_TITLE"
        const val EDIT_STOCK_DIALOG = "EDIT_STOCK_DIALOG"
        const val PREVIOUS_LIST_PAGE_BUTTON = "PREVIOUS_LIST_PAGE_BUTTON"
        const val NEXT_LIST_PAGE_BUTTON = "NEXT_LIST_PAGE_BUTTON"
    }

    object LoginRegisterScreen {
        const val LOGIN_REGISTER_TITLE = "LOGIN_REGISTER_TITLE"
        const val LOGIN_REGISTER_SUB_TITLE = "LOGIN_REGISTER_SUB_TITLE"
        const val SEGMENTED_BUTTON = "SEGMENTED_BUTTON"
        const val LOGIN_EMAIL_INPUT = "LOGIN_EMAIL_INPUT"
        const val LOGIN_PASSWORD_INPUT = "LOGIN_PASSWORD_INPUT"
        const val CONTINUE_BUTTON = "CONTINUE_BUTTON"

        const val REGISTER_EMAIL = "REGISTER_EMAIL"
        const val REGISTER_USERNAME = "REGISTER_USERNAME"
        const val REGISTER_PASSWORD = "REGISTER_PASSWORD"
        const val REGISTER_PASSWORD2 = "REGISTER_PASSWORD2"
        const val REGISTER_BUTTON = "REGISTER_BUTTON"
    }

    object SelectTenantScreen {
        const val SELECT_TENANT_TITLE = "SELECT_TENANT_TITLE"
        const val SELECT_TENANT_TITLE_SUB_TITLE = "SELECT_TENANT_TITLE_SUB_TITLE"
        const val CONTINUE_BUTTON = "CONTINUE_BUTTON"
        const val SWITCH_ACCOUNT_BUTTON = "SWITCH_ACCOUNT_BUTTON"
        const val TENANT_CARD_BUTTON = "TENANT_CARD_BUTTON"

        // Add new tenant dialog
        const val ADD_TENANT_BUTTON = "ADD_TENANT_BUTTON"
        const val ADD_NEW_TENANT_DIALOG = "ADD_NEW_TENANT_DIALOG"
        const val CONFIRM_ADD_BUTTON = "CONFIRM_ADD_BUTTON"
        const val CANCEL_ADD_BUTTON = "CANCEL_ADD_BUTTON"
        const val TENANT_NAME_INPUT = "TENANT_NAME_INPUT"
    }
}