...
import com.pos.cashiersp.presentation.ui.theme.Primary
import com.pos.cashiersp.presentation.ui.theme.Secondary
import com.pos.cashiersp.presentation.ui.theme.White

enum class LoginOrRegisterSegmentedButtonPage {
    Login,
    Register,
}

@Composable
fun LoginOrRegisterSegmentedButton(
    modifier: Modifier = Modifier,
    initialValue: LoginOrRegisterSegmentedButtonPage,
...
