...
                    modifier = Modifier
                        .fillMaxWidth()
                        .height(42.dp)
                        .testTag(TestTags.SelectTenantScreen.CONTINUE_BUTTON),
                    onClick = { viewModel.onEvent(SelectTenantEvent.OnClickContinue) },
                ) {
                    Text("Continue")
                }
                Spacer(Modifier.height(4.dp))
                TextButton(
                    onClick = { viewModel.onEvent(SelectTenantEvent.OnClickSwitchAccount) },
                    colors = ButtonDefaults.textButtonColors(
                        containerColor = Color.Transparent,
...
                    ),
                    modifier = Modifier
                        .fillMaxWidth()
                        .height(42.dp)
                        .testTag(TestTags.SelectTenantScreen.SWITCH_ACCOUNT_BUTTON)
                ) {
                    Text("Switch account")
                }

                // Make a little space. Maybe user button a bit close with home button. So make it a bit upper
                Spacer(Modifier.height(10.dp))
            }
        }
...
