...
            )
            Text("Staff", fontSize = 13.sp, color = Gray300, fontWeight = FontWeight.W400)
        }

        if (isSelected) {
            Text(
                "Current",
                textAlign = TextAlign.Center,
                fontSize = 10.sp,
                color = White,
                modifier = Modifier
                    .clip(RoundedCornerShape(4.dp))
                    .background(Primary)
...
